2011-07-18  Lin Ma  <lin.ma@oracle.com>

	* data/nwam-manager-properties: Fixed 7066511 [nwam] user with
	Network Manage profiles needs root password to launch
	nwam-manager-properties

2011-07-14  Yong Sun <y.yong.sun@oracle.com>

	* po/zh_TW.po:
	* po/zh_HK.po:
	updated the Traditional Chinese translations.

2011-07-14  Yong Sun <y.yong.sun@oracle.com>

	* po/*.po: updated UI message translation for drop 4.0.

2011-07-04  Michal Pryc <Michal.Pryc@Oracle.Com>

	* common/nwam-scf.c:
	* common/nwam-scf.h:
	* common/nwamui_daemon.c:
	 Compability change to allow build those sources on the
	 Source Juicer builds clients prior to 170. - FOLLOW-UP

2011-07-01  Michal Pryc <Michal.Pryc@Oracle.Com>

	* common/nwam-scf.c:
	* common/nwam-scf.h:
	* common/nwamui_daemon.c:
	 Compability change to allow build those sources on the
	 Source Juicer builds clients prior to 170.
	 This can be reverted once minilander is integrated
	 with Solaris.

2011-07-01  Michal Pryc <Michal.Pryc@Oracle.Com>

	* configure.in: Bump to 1.170.0
	* common/nwam-scf.c:
	* common/nwam-scf.h:
	* common/nwamui_daemon.c:
	* common/Makefile.am:
	* daemon/notify.c:
	* data/nwam-manager-properties:
	  Updated to fit minilander project and fix CR 7029824.

2011-06-27  Michal Pryc <Michal.Pryc@Oracle.Com>

	* capplet/nwam_conn_stat_panel.c:
	* capplet/nwam_pref_dialog.c:
	* capplet/nwam_tree_view.c:
	* capplet/nwam_vpn_pref_dialog.c:
	* daemon/notify.c:
	* data/nwam-manager-properties:
	* ui/nwam-manager-properties.ui:
	* configure.in:
	  Updated strings and dialogs for the Highlander project,
	  Bug fixes for CR:7042517 and CR 7026071
	  Bump the version to 1.164.1

2011-06-27  Lin Ma  <lin.ma@oracle.com>

	* capplet/nwam_profile_panel.c: (nwam_profile_panel_set_property),
	(apply), (nwam_profile_panel_finalize),
	(nwam_object_activate_toggled_cb),
	(nwam_object_toggled_cell_sensitive_func): Removed #if 0 blocks.
	* help/C/nwam-manager.xml: Merged CR#7042534.

>>>>>>> .r704